--- a/SAM/appsettings.json
+++ b/SAM/appsettings.json
@@ -1,8 +1,26 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-UI2K49F\\SQLEXPRESS;Database=SAM;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
+    }
+  },
+  "Identity": {
+    "Password": {
+      "RequireDigit": true,
+      "RequiredLength": 8,
+      "RequireNonAlphanumeric": true,
+      "RequireUppercase": true,
+      "RequireLowercase": true
+    },
+    "Lockout": {
+      "AllowedForNewUsers": true,
+      "DefaultLockoutTimeSpan": "00:15:00",
+      "MaxFailedAccessAttempts": 5
     }
   },
   "AllowedHosts": "*"
