--- a/SAM/appsettings.json
+++ b/SAM/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-UI2K49F\\SQLEXPRESS;Database=SAM;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-UI2K49F\\SQLEXPRESS;Database=SAM;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:twc-infraforce.database.windows.net,1433;Initial Catalog=SAM;Persist Security Info=False;User ID=sysforce;Password=Mapforce1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -21,6 +22,16 @@
       "AllowedForNewUsers": true,
       "DefaultLockoutTimeSpan": "00:15:00",
       "MaxFailedAccessAttempts": 5
+    }
+  },
+  "Email": {
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "Username": "Razakhan21702@gmail.com",
+      "Password": "rhek vyos upla ozms",
+      "From": "Razakhan21702@gmail.com",
+      "EnableSsl": true
     }
   },
   "AllowedHosts": "*"
